# claude-github-tools

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
docs/: release-process.md
docs/superpowers/specs/: 2026-07-06-address-feedback-design.md
hooks/: bootstrap-venv.sh  hooks.json
scripts/: _gh_common.py  gh-quick-wins.py  gh-refresh-issues.py  gh-release-status.py  gh-summary.py
scripts/tests/: test_gh_common.py  test_gh_quick_wins.py  test_gh_refresh_issues.py  test_gh_release_status.py  test_gh_summary.py
skills/address-feedback/: SKILL.md  triggers.yml
skills/gh-create-issue/: SKILL.md  triggers.yml
skills/gh-create-issue/evals/: evals.json
skills/gh-pr-review-address/: SKILL.md  triggers.yml
skills/gh-quick-wins/: SKILL.md  triggers.yml
skills/gh-refresh-issues/: SKILL.md  triggers.yml
skills/gh-release-status/: SKILL.md  triggers.yml
skills/gh-summary/: SKILL.md  triggers.yml
skills/github-actions/: SKILL.md  triggers.yml
skills/github-actions/references/: incident-history.md
